# kbo-lineup-lab

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml
apps/api/: .env.example  alembic.ini  pyproject.toml  vulture_whitelist.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_snapshot_uniqueness.py  0003_add_postgame_review_uniqueness.py  0004_add_raw_ingestion_payloads.py  0005_add_player_handedness.py
apps/api/app/: cli.py  main.py
apps/api/app/api/: deps.py
apps/api/app/db/: base.py  session.py
apps/api/app/ingestion/: __init__.py  game_id.py  http_client.py  player_matcher.py  raw_store.py  season_stats_map.py  types.py
apps/api/app/jobs/: __init__.py  _run_tracking.py  bootstrap.py  daily_pipeline.py  full_pipeline.py  postgame_pipeline.py  pregame_pipeline.py
apps/api/app/lineup_model/: __init__.py  lineup_score.py  player_score.py  recommendation.py  types.py
apps/api/app/models/: __init__.py  evaluation.py  game.py  player.py  postgame.py  snapshot.py  team.py
apps/api/app/postgame/: __init__.py  types.py  (+2 more)
apps/api/fixtures/: lg_2026_sample.json
apps/api/scripts/: seed_demo.py  seed_real.py
apps/api/tests/: test_batting_order.py  test_bootstrap.py  test_box_score_collector.py  test_evaluation_run_idempotency.py  test_fixture_loader.py  test_full_pipeline.py  test_harness.py  test_health.py  test_ingestion_normalizers.py  test_ingestion_status_api.py  test_lineup_collector.py  test_lineup_score.py  test_pipeline_jobs.py  test_player_score.py  test_player_stats_collector.py  test_postgame_api.py  test_postgame_review.py  test_pregame_api.py  test_raw_ingestion_store.py  test_recommendation.py  test_schedule_roster_collectors.py  test_schema.py  test_snapshot_selector.py
(+145 files in other folders)
