[project]
name = "kbo-lineup-lab-api"
version = "0.1.0"
requires-python = ">=3.13"
description = "KBO Lineup Lab FastAPI backend"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.bandit]
exclude_dirs = ["tests"]
