[project]
name = "kbo-lineup-lab-api"
version = "0.1.0"
requires-python = ">=3.13"
description = "KBO Lineup Lab FastAPI backend"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "openai>=2.38.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
kbo-lab = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
# typer 데코레이터는 mypy strict에서 misc 오류를 발생시키므로 억제
[[tool.mypy.overrides]]
module = ["app.cli"]
disable_error_code = ["misc"]

[tool.bandit]
exclude_dirs = ["tests"]
